SOCINT-156: Set-up for 'register' journey Added school selection Updated DS to 40.0.1 (latest), and added required prefixing of css classes

--- a/app/templates/launch-eq.html
+++ b/app/templates/launch-eq.html
@@ -29,7 +29,7 @@
 
     {{ onsButton({
         'text': _('Launch census'),
-        'classes': 'u-mb-xl',
+        'classes': 'ons-u-mb-xl',
         'name': 'action[save_continue]',
         'submitType': 'loader'
     }) }}
