--- a/app/templates/register-consent-declined.html
+++ b/app/templates/register-consent-declined.html
@@ -2,6 +2,6 @@
 
 {%- block main -%}
 
-    <h1 class="u-mb-xs u-fs-l">{{ _('You have been removed from this study') }}</h1>
+    <h1 class="ons-u-mb-xs ons-u-fs-l">{{ _('You have been removed from this study') }}</h1>
 
 {%- endblock main -%}
