--- a/app/templates/register-consent.html
+++ b/app/templates/register-consent.html
@@ -12,7 +12,7 @@
 
 {%- block main -%}
 
-    <h1 class="u-mb-xs u-fs-l">{{ _('Confirm consent') }}</h1>
+    <h1 class="ons-u-mb-xs ons-u-fs-l">{{ _('Confirm consent') }}</h1>
 
     {{
         onsList({
