--- a/app/templates/register-enter-name.html
+++ b/app/templates/register-enter-name.html
@@ -159,7 +159,7 @@
     {{
         onsButton({
             'text': _('Continue'),
-            'classes': 'u-mt-l'
+            'classes': 'ons-u-mt-l'
         })
     }}
 
