--- a/app/templates/register-start.html
+++ b/app/templates/register-start.html
@@ -11,13 +11,13 @@
 
 {%- block main -%}
 
-    <h1 class="u-mb-xs u-fs-l">{{ _('Register a child') }}</h1>
+    <h1 class="ons-u-mb-xs ons-u-fs-l">{{ _('Register a child') }}</h1>
 
     {{
         onsButton({
             'type': 'input',
             'text': _('Start'),
-            'classes': 'u-mb-m u-mt-m',
+            'classes': 'ons-u-mb-m ons-u-mt-m',
         })
     }}
 
