--- a/app/templates/request-code-confirm-address.html
+++ b/app/templates/request-code-confirm-address.html
@@ -59,7 +59,7 @@
                 'name': 'form-confirm-address',
                 'radios': form_options,
                 'legend': _('Is this the correct address?'),
-                'legendClasses': 'u-vh',
+                'legendClasses': 'ons-u-vh',
                 'error': error_address
             })
         }}
@@ -69,7 +69,7 @@
     {{
         onsButton({
             'text': _('Continue'),
-            'classes': 'u-mt-l',
+            'classes': 'ons-u-mt-l',
             'submitType': 'loader'
         })
     }}
