--- a/app/templates/request-code-confirm-send-by-post.html
+++ b/app/templates/request-code-confirm-send-by-post.html
@@ -60,14 +60,14 @@
             {{ postcode }}
         </p>
 
-        <p class="u-mb-m"><a href="{{ request_common_enter_name_link }}">{{ _('Change name') }}</a></p>
+        <p class="ons-u-mb-m"><a href="{{ request_common_enter_name_link }}">{{ _('Change name') }}</a></p>
 
         {{
             onsRadios({
                 'name': 'request-name-address-confirmation',
                 'radios': form_options,
                 'legend': question_title,
-                'legendClasses': 'u-vh',
+                'legendClasses': 'ons-u-vh',
                 'error': error_radio
             })
         }}
@@ -77,7 +77,7 @@
     {{
         onsButton({
             'text': _('Continue'),
-            'classes': 'u-mt-l',
+            'classes': 'ons-u-mt-l',
             'submitType': 'loader'
         })
     }}
