--- a/app/templates/request-code-enter-name.html
+++ b/app/templates/request-code-enter-name.html
@@ -150,7 +150,7 @@
     {{
         onsButton({
             'text': _('Continue'),
-            'classes': 'u-mt-l'
+            'classes': 'ons-u-mt-l'
         })
     }}
 
