--- a/app/templates/request-contact-centre.html
+++ b/app/templates/request-contact-centre.html
@@ -2,7 +2,7 @@
 
 {%- block main -%}
 
-    <h1 class="u-mt-l">{{ _('You need to call the customer contact centre') }}</h1>
+    <h1 class="ons-u-mt-l">{{ _('You need to call the customer contact centre') }}</h1>
 
     {%- if issue == 'address-not-required' -%}
         <p>The address you have selected is not required for this survey. If you believe this to be incorrect you will need to contact us.</p>
