--- a/app/templates/signed-out.html
+++ b/app/templates/signed-out.html
@@ -15,7 +15,7 @@
         })
     -%}
 
-        <h1 class="u-mb-xs u-fs-xl">
+        <h1 class="ons-u-mb-xs ons-u-fs-xl">
             {{ _('Your progress has been saved') }}
         </h1>
 
