--- a/app/templates/start-confirm-address.html
+++ b/app/templates/start-confirm-address.html
@@ -59,7 +59,7 @@
             'name': 'address-check-answer',
             'radios': form_radio_options,
             'legend': _('Is this the correct address?'),
-            'legendClasses': 'u-vh',
+            'legendClasses': 'ons-u-vh',
             'error': error_address
         })
     }}
@@ -69,7 +69,7 @@
     {{
         onsButton({
             'text': _('Continue'),
-            'classes': 'u-mt-l',
+            'classes': 'ons-u-mt-l',
             'name': 'action[save_continue]',
             'submitType': 'loader'
         })
