--- a/app/templates/start-too-many-requests.html
+++ b/app/templates/start-too-many-requests.html
@@ -53,7 +53,7 @@
 
     <hr>
 
-    <h2 class="u-fs-m u-mt-l">{{_("Why it's important you take part in the census")}}</h2>
+    <h2 class="ons-u-fs-m ons-u-mt-l">{{_("Why it's important you take part in the census")}}</h2>
 
     <p>{{ _('Taking part in the census is your chance to help make sure you and your community get the services you need for the next 10 years and beyond.') }}</p>
 
