--- a/app/templates/register-complete.html
+++ b/app/templates/register-complete.html
@@ -10,12 +10,12 @@
             'id': 'success-id',
             'icon': 'check',
             'iconSize': 'l',
-            'classes': 'u-mt-xl u-mb-m'
+            'classes': 'ons-u-mt-xl ons-u-mb-m'
         })
     -%}
 
         {%- autoescape false -%}
-            <h1 class="u-mb-xs u-fs-l">{{ _('Your children have been registered for the survey') }}</h1>
+            <h1 class="ons-u-mb-xs ons-u-fs-l">{{ _('Your children have been registered for the survey') }}</h1>
         {%- endautoescape -%}
 
         <p>{{ _('A text message confirming your registration should arrive soon') }}</p>
@@ -26,7 +26,7 @@
         call onsPanel({
             'type': 'bare',
             'icon': 'lock',
-            'classes': 'u-mb-l'
+            'classes': 'ons-u-mb-l'
         })
     -%}
 
