--- a/app/templates/register-enter-mobile.html
+++ b/app/templates/register-enter-mobile.html
@@ -50,7 +50,7 @@
     {{
         onsButton({
             'text': _('Continue'),
-            'classes': 'u-mt-l'
+            'classes': 'ons-u-mt-l'
         })
     }}
 
