--- a/app/templates/request-code-confirm-send-by-text.html
+++ b/app/templates/request-code-confirm-send-by-text.html
@@ -52,7 +52,7 @@
                 'name': 'request-mobile-confirmation',
                 'radios': form_options,
                 'legend': _('Is this mobile number correct?'),
-                'legendClasses': 'u-vh',
+                'legendClasses': 'ons-u-vh',
                 'error': error_mobile
             })
         }}
@@ -62,7 +62,7 @@
     {{
         onsButton({
             'text': _('Continue'),
-            'classes': 'u-mt-l',
+            'classes': 'ons-u-mt-l',
             'submitType': 'loader'
         })
     }}
