--- a/app/templates/request-code-enter-address.html
+++ b/app/templates/request-code-enter-address.html
@@ -55,7 +55,7 @@
             {{
                 onsButton({
                     'text': _('Continue'),
-                    'classes': 'u-mt-l',
+                    'classes': 'ons-u-mt-l',
                     'submitType': 'loader'
                 })
             }}
@@ -110,7 +110,7 @@
             {{
                 onsButton({
                     'text': _('Continue'),
-                    'classes': 'u-mt-l',
+                    'classes': 'ons-u-mt-l',
                     'submitType': 'timer'
                 })
             }}
