--- a/app/templates/request-code-select-how-to-receive.html
+++ b/app/templates/request-code-select-how-to-receive.html
@@ -66,7 +66,7 @@
     {{
         onsButton({
             'text': _('Continue'),
-            'classes': 'u-mt-xl u-mb-xl'
+            'classes': 'ons-u-mt-xl ons-u-mb-xl'
         })
     }}
 
