--- a/app/templates/request-code-sent-by-post.html
+++ b/app/templates/request-code-sent-by-post.html
@@ -22,11 +22,11 @@
             'id': 'success-id',
             'icon': 'check',
             'iconSize': 'l',
-            'classes': 'u-mt-xl'
+            'classes': 'ons-u-mt-xl'
         })
     -%}
 
-        <h1 class="u-mb-xs u-fs-l">{{ _('A letter will be sent to %(name)s at %(address)s', name=display_name, address=display_address)|safe }} </h1>
+        <h1 class="ons-u-mb-xs ons-u-fs-l">{{ _('A letter will be sent to %(name)s at %(address)s', name=display_name, address=display_address)|safe }} </h1>
 
         <p>{{ _('The letter with a new access code for you to start the study should arrive within 5 working days') }}</p>
 
@@ -36,7 +36,7 @@
         onsButton({
             'type': 'button',
             'text': _('Done'),
-            'classes': 'u-mt-xl',
+            'classes': 'ons-u-mt-xl',
             'url': census_home_link
         })
     }}
