--- a/app/templates/request-code-sent-by-text.html
+++ b/app/templates/request-code-sent-by-text.html
@@ -14,12 +14,12 @@
             'id': 'success-id',
             'icon': 'check',
             'iconSize': 'l',
-            'classes': 'u-mt-xl u-mb-m'
+            'classes': 'ons-u-mt-xl ons-u-mb-m'
         })
     -%}
 
         {%- autoescape false -%}
-            <h1 class="u-mb-xs u-fs-l">{{ _('A text has been sent to %(number)s', number=submitted_mobile_number|replace(" ", "&nbsp;"))|safe }} </h1>
+            <h1 class="ons-u-mb-xs ons-u-fs-l">{{ _('A text has been sent to %(number)s', number=submitted_mobile_number|replace(" ", "&nbsp;"))|safe }} </h1>
         {%- endautoescape -%}
 
         <p>{{ _('The text message with a new access code should arrive soon for you to start your study') }}</p>
@@ -30,7 +30,7 @@
         call onsPanel({
             'type': 'bare',
             'icon': 'lock',
-            'classes': 'u-mb-l'
+            'classes': 'ons-u-mb-l'
         })
     -%}
 
@@ -38,19 +38,19 @@
 
     {%- endcall -%}
 
-    <h2 class="u-fs-m u-mb-xs">{{ _("Didn’t receive a text?") }}</h2>
+    <h2 class="ons-u-fs-m ons-u-mb-xs">{{ _("Didn’t receive a text?") }}</h2>
 
     {%- autoescape false -%}
-        <p class="u-mb-l">{{ _("It can take a few minutes for the text to arrive. If it doesn’t arrive, you can %(open)srequest a new access code%(close)s.", open='<a href="%s">' % request_code_link, close='</a>')|safe }}</p>
+        <p class="ons-u-mb-l">{{ _("It can take a few minutes for the text to arrive. If it doesn’t arrive, you can %(open)srequest a new access code%(close)s.", open='<a href="%s">' % request_code_link, close='</a>')|safe }}</p>
     {%- endautoescape -%}
 
-    <h2 class="u-mb-s u-fs-m">{{ _("Ready to start your study?") }}</h2>
+    <h2 class="ons-u-mb-s ons-u-fs-m">{{ _("Ready to start your study?") }}</h2>
 
     {{
         onsButton({
             'type': 'button',
             'text': _('Start study'),
-            'classes': 'u-mb-m',
+            'classes': 'ons-u-mb-m',
             'url': start_study_link
         })
     }}
