--- a/app/templates/start-incorrect-address.html
+++ b/app/templates/start-incorrect-address.html
@@ -2,7 +2,7 @@
 
 {%- block main -%}
 
-    <h1 class="u-mt-l">{{ _('You do not need to take part in this study') }}</h1>
+    <h1 class="ons-u-mt-l">{{ _('You do not need to take part in this study') }}</h1>
 
     <p>We do not need you to complete a study at this time.</p>
 
